static/styles.css
:root
{
  --color1: #50c878;
  --color2: #ffdf82; /* Generated with https://mycolor.space/?hex=%2350C878&sub=1 */
  --color3: #c7a84d;
  --color4: #8e7519;
  --background: #fff9e5;
  --foreground: #2b2408;
}

body
{
  background: var(--background);
}

h1, h3
{
  color: var(--foreground);
}

h3
{
  margin: 0 0 1em 0;
  text-align: left;
}

a
{
  border: 0 solid var(--color4);
  border-bottom-width: 0.1em;
  text-decoration: none;
  color: var(--foreground);
}

a:hover
{
  background: var(--color2);
  color: black;
  cursor: pointer;
}

.content
{
  margin: 0 auto;
  max-width: 700px;
  text-align: center;
}

footer
{
  text-align: right;
  margin: 1em;
}

.borders
{
  margin: 2em auto;
  padding: 1em 1.5em;
  border: 0.1em solid var(--color4);
}

.model-select
{
  display: flex;
  gap: 1em;
  justify-content: center;
}

.model-select a
{
  padding: 0.5em;
}

.content-box
{
  display: flex;
  align-items: center;
  gap: 1em;
  padding: 0 !important;
}

.inputs
{
  padding: 1em;
  flex: 1;
  width: 100%;
}

.inputs td
{
  width: 50%;
}

.inputs input
{
  width: 100%;
  box-sizing: border-box;
  padding: 0.1em 0.2em;
}

.resource
{
  display: block;
  margin: 0.3em;
  padding: 0.2em 0.5em;
  text-align: left;
}

.resource-author
{
  margin-left: 1em;
}

@media screen and (max-width: 40rem)
{
  .model-select
  {
    display: grid;
    grid-template-columns: 50% 50%;
    margin: 2em 10%;
  }

  .borders
  {
    background: none;
    border: none;
  }

  .content-box
  {
    flex-direction: column;
  }

  .inputs td.button-col
  {
    text-align: left;
  }

  .inputs input
  {
    padding: 0.3em;
  }
}

